--- a/food/templates/food/blog-details.html
+++ b/food/templates/food/blog-details.html
@@ -122,24 +122,28 @@
 						</div>
 						<div class="blog-comment-box">
 							<h3>Comments</h3>
+							{% for comment in comments %}
+							{% if comment.show_text %}
 							<div class="comment-item">
 								<div class="comment-item-left">
 									<img src="{% static 'images/avt-img.jpg' %}" alt="">
 								</div>
 								<div class="comment-item-right">
 									<div class="pull-left">
-										<a href="#">Rubel Ahmed</a>
+										<a href="#">{{comment.name}}</a>
 									</div>
 									<div class="pull-right">
-										<i class="fa fa-clock-o" aria-hidden="true"></i>Time : <span>11.30 am</span>
+										<i class="fa fa-clock-o" aria-hidden="true"></i>Time : <span>{{comment.time}}</span>
 									</div>
 									<div class="des-l">
-										<p>Morbi lacinia ultrices lorem id tincidunt. Cras id dui risus. Pellentesque consectetur id mi sed pharetra. Proin imperdiet gravida nisl, sit amet varius urna. In auctor.</p>
+										<p>{{comment.message}}</p>
 									</div>
 									<a href="#" class="right-btn-re"><i class="fa fa-reply" aria-hidden="true"></i> Reply</a>
 								</div>
 							</div>
-							<div class="comment-item children">
+							{% endif %}
+							{% endfor %}
+							{% comment %} <div class="comment-item children">
 								<div class="comment-item-left">
 									<img src="{% static 'images/avt-img.jpg' %}" alt="">
 								</div>
@@ -155,29 +159,13 @@
 									</div>
 									<a href="#" class="right-btn-re"><i class="fa fa-reply" aria-hidden="true"></i> Reply</a>
 								</div>
-							</div>
-							<div class="comment-item">
-								<div class="comment-item-left">
-									<img src="{% static 'images/avt-img.jpg' %}" alt="">
-								</div>
-								<div class="comment-item-right">
-									<div class="pull-left">
-										<a href="#">Rubel Ahmed</a>
-									</div>
-									<div class="pull-right">
-										<i class="fa fa-clock-o" aria-hidden="true"></i>Time : <span>11.30 am</span>
-									</div>
-									<div class="des-l">
-										<p>Morbi lacinia ultrices lorem id tincidunt. Cras id dui risus. Pellentesque consectetur id mi sed pharetra. Proin imperdiet gravida nisl, sit amet varius urna. In auctor.</p>
-									</div>
-									<a href="#" class="right-btn-re"><i class="fa fa-reply" aria-hidden="true"></i> Reply</a>
-								</div>
-							</div>
+							</div> {% endcomment %}
 						</div>
 						<div class="comment-respond-box">
 							<h3>Leave your comment </h3>
 							<div class="comment-respond-form">
-								<form id="commentrespondform" class="comment-form-respond row" method="post">
+								<form class="comment-form-respond row" method="post">
+									{% csrf_token %}
 									<div class="col-lg-6 col-md-6 col-sm-6">
 										<div class="form-group">
 											<input id="name_com" class="form-control" name="name" placeholder="Name" type="text">
@@ -188,11 +176,11 @@
 									</div>
 									<div class="col-lg-6 col-md-6 col-sm-6">
 										<div class="form-group">
-											<textarea class="form-control" id="textarea_com" placeholder="Your Message" rows="2"></textarea>
+											<textarea name="message" class="form-control" id="textarea_com" placeholder="Your Message" rows="2"></textarea>
 										</div>
 									</div>
 									<div class="col-lg-12 col-md-12 col-sm-12">
-										<button class="btn btn-submit">Submit comment</button>
+										<button class="btn btn-submit" type='submit'>Send comment</button>
 									</div>
 								</form>
 							</div>
@@ -203,17 +191,22 @@
 				<div class="col-xl-4 col-lg-4 col-md-6 col-sm-8 col-12 blog-sidebar">
 					<div class="right-side-blog">
 						<h3>Search</h3>
-						<div class="blog-search-form">
-							<input name="search" placeholder="Search blog" type="text">
-							<button class="search-btn">
-								<i class="fa fa-search" aria-hidden="true"></i>
-							</button>
-						</div>
+
+						<form action="{% url 'search' %}" method="get">
+							<div class="blog-search-form">
+								<input name="search" placeholder="Search blog" type="text">
+								<button class="search-btn" type="submit">
+									<i class="fa fa-search" aria-hidden="true"></i>
+								</button>
+							</div>
+						</form>
+
+
 						<h3>Categories</h3>
 						<div class="blog-categories">
 							<ul>
 								{% for category in categorys %}
-								<li><a href="#"><span>{{category.title}}</span></a></li>
+								<li><a href="{% url 'blog_category' category.slug %}"><span>{{category.title}}</span></a></li>
 								{% endfor %}
 							</ul>
 
@@ -259,7 +252,7 @@
 						<div class="blog-tag-box">
 							<ul class="list-inline tag-list">
 								{% for tag in tags %}
-									<li class="list-inline-item"><a href="#">{{tag.title}}</a></li>
+										<li class="list-inline-item"><a href="">{{tag.title}}</a></li>
 								{% endfor %}
 							</ul>
 						</div>
@@ -271,6 +264,8 @@
 	</div>
 	<!-- End details -->
 	
+	
+
 	<!-- Start Contact info -->
 	<div class="contact-imfo-box">
 		<div class="container">
