--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -265,7 +265,7 @@
 						<div class="carousel-inner mt-4">
 							<div class="carousel-item text-center active">
 								<div class="img-box p-1 border rounded-circle m-auto">
-									<img class="d-block w-100 rounded-circle" src="https://avatars.githubusercontent.com/u/95845593?v=4" alt="">
+									<img class="d-block w-100 rounded-circle" src="{% static 'images/artin.jpg' %}" alt="">
 								</div>
 								<h5 class="mt-4 mb-0"><strong class="text-warning text-uppercase">Artin mohajeri</strong></h5>
 								<h6 class="text-dark m-0">Web Developer</h6>
