--- a/food/templates/food/about.html
+++ b/food/templates/food/about.html
@@ -250,7 +250,7 @@
 					<div class="overflow-hidden">
 						<h4>Phone</h4>
 						<p class="lead">
-							+01 123-456-4590
+							+98 919 227 8018
 						</p>
 					</div>
 				</div>
@@ -259,7 +259,7 @@
 					<div class="overflow-hidden">
 						<h4>Email</h4>
 						<p class="lead">
-							yourmail@gmail.com
+							artinmohajeri@gmail.com
 						</p>
 					</div>
 				</div>
@@ -268,7 +268,7 @@
 					<div class="overflow-hidden">
 						<h4>Location</h4>
 						<p class="lead">
-							800, Lorem Street, US
+							Tehran Iran
 						</p>
 					</div>
 				</div>
@@ -294,9 +294,9 @@
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<h3>Contact information</h3>
-					<p class="lead">Ipsum Street, Lorem Tower, MO, Columbia, 508000</p>
-					<p class="lead"><a href="#">+01 2000 800 9999</a></p>
-					<p><a href="https://gmail.com"> info@admin.com</a></p>
+					<p class="lead">Tehran Iran</p>
+					<p class="lead"><a href="#">+98 919 227 8018</a></p>
+					<p><a href="https://gmail.com"> artinmohajeri@gmail.com</a></p>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<h3>Subscribe</h3>
