--- a/food/templates/food/blog.html
+++ b/food/templates/food/blog.html
@@ -98,7 +98,7 @@
 			</div>
 
 			<div class="row">
-				{% for blog in blogs %}
+				{% for blog in blog_list %}
 				<div class="col-lg-4 col-md-6 col-12">
 					<div class="blog-box-inner">
 						<div class="blog-img-box">
@@ -123,6 +123,52 @@
 	</div>
 	<!-- End blog -->
 	
+	<!-- start paginator -->
+	{% if blog_list.has_other_pages %}
+	<div class="container mb-3">
+		<div class="row">
+			<div class="col d-flex justify-content-center">
+				<nav aria-label="Page navigation example">
+					<ul class="pagination">
+					{% if blog_list.has_previous %}
+						<li class="page-item">
+							<a class="page-link" href="?page={{blog_list.previous_page_number}}" aria-label="Previous">
+							<span aria-hidden="true">&laquo;</span>
+							<span class="sr-only">Previous</span>
+							</a>
+						</li?>
+					  {% endif %}
+
+
+						{% for page in blog_list.paginator.page_range %}
+						
+						{% if blog_list.number == page %}
+						<li class="page-item active"><a class="page-link" href="?page={{page}}">{{page}}</a></li>
+						{% else %}
+						<li class="page-item"><a class="page-link" href="?page={{page}}">{{page}}</a></li>
+						{% endif %}
+
+						{% endfor %}
+
+
+
+					  {% if blog_list.has_next %}
+					  <li class="page-item">
+						<a class="page-link" href="?page={{blog_list.next_page_number}}" aria-label="Next">
+						  <span aria-hidden="true">&raquo;</span>
+						  <span class="sr-only">Next</span>
+						</a>
+					  </li>
+					  {% endif %}
+					</ul>
+				  </nav>
+			</div>
+		</div>
+	</div>
+	{% endif %}
+	<!-- end paginator -->
+
+
 	<!-- Start Contact info -->
 	<div class="contact-imfo-box">
 		<div class="container">
