--- a/food/templates/food/contact.html
+++ b/food/templates/food/contact.html
@@ -99,7 +99,8 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-12">
-					<form id="contactForm">
+					<form method='post'>
+						{% csrf_token %}
 						<div class="row">
 							<div class="col-md-12">
 								<div class="form-group">
@@ -109,26 +110,30 @@
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
-									<input type="text" placeholder="Your Email" id="email" class="form-control" name="name" required data-error="Please enter your email">
+									<input type="email" placeholder="Your Email" id="email" class="form-control" name="name" required data-error="Please enter your email">
 									<div class="help-block with-errors"></div>
 								</div> 
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
-									<select class="custom-select d-block form-control" id="guest" required data-error="Please Select Person">
+									<select name='number_of_people' class="custom-select d-block form-control" id="guest" required data-error="Please Select Person">
 									  <option disabled selected>Please Select Person*</option>
 									  <option value="1">1</option>
 									  <option value="2">2</option>
 									  <option value="3">3</option>
 									  <option value="4">4</option>
 									  <option value="5">5</option>
+									  <option value="5">6</option>
+									  <option value="5">7</option>
+									  <option value="5">8</option>
+									  <option value="5">9</option>
 									</select>
 									<div class="help-block with-errors"></div>
 								</div> 
 							</div>
 							<div class="col-md-12">
 								<div class="form-group"> 
-									<textarea class="form-control" id="message" placeholder="Your Message" rows="4" data-error="Write your message" required></textarea>
+									<textarea name='message' class="form-control" id="message" placeholder="Your Message" rows="4" data-error="Write your message" required></textarea>
 									<div class="help-block with-errors"></div>
 								</div>
 								<div class="submit-button text-center">
@@ -154,7 +159,7 @@
 					<div class="overflow-hidden">
 						<h4>Phone</h4>
 						<p class="lead">
-							+01 123-456-4590
+							+98 919 227 8018
 						</p>
 					</div>
 				</div>
@@ -163,7 +168,7 @@
 					<div class="overflow-hidden">
 						<h4>Email</h4>
 						<p class="lead">
-							yourmail@gmail.com
+							artinmohajeri.gmail.com
 						</p>
 					</div>
 				</div>
@@ -172,7 +177,7 @@
 					<div class="overflow-hidden">
 						<h4>Location</h4>
 						<p class="lead">
-							800, Lorem Street, US
+							Tehran Iran
 						</p>
 					</div>
 				</div>
@@ -199,8 +204,8 @@
 				<div class="col-lg-3 col-md-6">
 					<h3>Contact information</h3>
 					<p class="lead">Ipsum Street, Lorem Tower, MO, Columbia, 508000</p>
-					<p class="lead"><a href="#">+01 2000 800 9999</a></p>
-					<p><a href="https://gmail.com"> info@admin.com</a></p>
+					<p class="lead"><a href="#">+98 919 227 8018</a></p>
+					<p><a href="https://gmail.com"> artinmohajeri@gmail.com</a></p>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<h3>Subscribe</h3>
