--- a/food/templates/food/gallery.html
+++ b/food/templates/food/gallery.html
@@ -151,37 +151,22 @@
 						<div class="carousel-inner mt-4">
 							<div class="carousel-item text-center active">
 								<div class="img-box p-1 border rounded-circle m-auto">
-									<img class="d-block w-100 rounded-circle" src="{% static 'images/profile-1.jpg' %}" alt="">
+									<img class="d-block w-100 rounded-circle" src="{% static 'images/artin.jpg' %}" alt="">
 								</div>
-								<h5 class="mt-4 mb-0"><strong class="text-warning text-uppercase">Paul Mitchel</strong></h5>
+								<h5 class="mt-4 mb-0"><strong class="text-warning text-uppercase">Artin mohajeri</strong></h5>
 								<h6 class="text-dark m-0">Web Developer</h6>
-								<p class="m-0 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante. Idac bibendum scelerisque non non purus. Suspendisse varius nibh non aliquet.</p>
+								<p class="m-0 pt-3">I am a website developer. I make websites using python and django</p>
 							</div>
-							<div class="carousel-item text-center">
-								<div class="img-box p-1 border rounded-circle m-auto">
-									<img class="d-block w-100 rounded-circle" src="{% static 'images/profile-3.jpg' %}" alt="">
-								</div>
-								<h5 class="mt-4 mb-0"><strong class="text-warning text-uppercase">Steve Fonsi</strong></h5>
-								<h6 class="text-dark m-0">Web Designer</h6>
-								<p class="m-0 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante. Idac bibendum scelerisque non non purus. Suspendisse varius nibh non aliquet.</p>
-							</div>
-							<div class="carousel-item text-center">
-								<div class="img-box p-1 border rounded-circle m-auto">
-									<img class="d-block w-100 rounded-circle" src="{% static 'images/profile-7.jpg' %}" alt="">
-								</div>
-								<h5 class="mt-4 mb-0"><strong class="text-warning text-uppercase">Daniel vebar</strong></h5>
-								<h6 class="text-dark m-0">Seo Analyst</h6>
-								<p class="m-0 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante. Idac bibendum scelerisque non non purus. Suspendisse varius nibh non aliquet.</p>
-							</div>
+							
 						</div>
-						<a class="carousel-control-prev" href="#reviews" role="button" data-slide="prev">
+						{% comment %} <a class="carousel-control-prev" href="#reviews" role="button" data-slide="prev">
 							<i class="fa fa-angle-left" aria-hidden="true"></i>
 							<span class="sr-only">Previous</span>
 						</a>
 						<a class="carousel-control-next" href="#reviews" role="button" data-slide="next">
 							<i class="fa fa-angle-right" aria-hidden="true"></i>
 							<span class="sr-only">Next</span>
-						</a>
+						</a> {% endcomment %}
                     </div>
 				</div>
 			</div>
@@ -198,7 +183,7 @@
 					<div class="overflow-hidden">
 						<h4>Phone</h4>
 						<p class="lead">
-							+01 123-456-4590
+							+98 919 227 8018
 						</p>
 					</div>
 				</div>
@@ -207,7 +192,7 @@
 					<div class="overflow-hidden">
 						<h4>Email</h4>
 						<p class="lead">
-							yourmail@gmail.com
+							artinmohajeri@gmail.com
 						</p>
 					</div>
 				</div>
@@ -216,7 +201,7 @@
 					<div class="overflow-hidden">
 						<h4>Location</h4>
 						<p class="lead">
-							800, Lorem Street, US
+							Tehran Iran
 						</p>
 					</div>
 				</div>
@@ -242,9 +227,9 @@
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<h3>Contact information</h3>
-					<p class="lead">Ipsum Street, Lorem Tower, MO, Columbia, 508000</p>
-					<p class="lead"><a href="#">+01 2000 800 9999</a></p>
-					<p><a href="#"> info@admin.com</a></p>
+					<p class="lead">Tehran Iran</p>
+					<p class="lead"><a href="#">+98 919 227 8018</a></p>
+					<p><a href="#"> artinmohajeri@gmial.com</a></p>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<h3>Subscribe</h3>
